--- a/products/templates/cart.html
+++ b/products/templates/cart.html
@@ -4,6 +4,124 @@
 
 {% load static %}
 
+<style>
+    .py-3 {
+        background-color: #FFB6C1;
+    }
+
+    .py-3 a {
+        color: white;
+        text-decoration: none;
+        margin: 0 5px;
+        font-weight: bold;
+    }
+
+    .py-3 a:hover {
+        text-decoration: none;
+    }
+
+    .py-5 {
+        margin-top: 40px;
+    }
+
+    .card-shadow {
+        box-shadow: 0 0 20px rgba(255, 182, 193, 0.5);
+        border-radius: 10px;
+        margin-bottom: 20px;
+        transition: box-shadow 0.3s ease;
+    }
+
+    .card-shadow:hover {
+        box-shadow: 0 0 50px rgba(255, 144, 255, 0.8);
+    }
+
+    .cart_data {
+        text-align: center;
+    }
+
+    /* Separate each product data */
+    .product_data {
+        padding: 20px;
+        border-bottom: 5px
+    }
+
+    .product_data img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 10px;
+    }
+
+    h6 {
+        font-size: 18px;
+        font-weight: bold;
+        color: rgb(80, 80, 80);
+        margin: 0;
+    }
+
+    .qty-input {
+        width: 30px;
+        text-align: center;
+    }
+
+    .decrement-btn,
+    .increment-btn {
+        width: 38px;
+        height: 38px;
+        padding: 0;
+        border-radius: 8px;
+        font-size: 15px;
+        background-color: #FFB9B9;
+        color: white;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        margin-right: 5px;
+        margin-left: 5px;
+    }
+
+    .bottom-buttons {
+        margin-top: 5px;
+    }
+    .delete-cart-item {
+        font-weight: bold;
+        margin: auto;
+    }
+    .btn-success {
+        background-color: rgb(163, 255, 151);
+        border-radius: 15px;
+        border-style: none;
+        font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        height: 3rem;
+        line-height: 3rem;
+        padding: 0 1.6rem;
+        text-align: center;
+        transition: all .5s;
+        touch-action: manipulation;
+    }
+
+    .btn-success:hover {
+        background-color: rgb(97, 165, 88);
+    }
+
+    .btn-danger {
+        background-color: #ff6a81;
+        border-radius: 15px;
+        border-style: none;
+        font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        height: 3rem;
+        line-height: 3rem;
+        padding: 0 1.6rem;
+        text-align: center;
+        transition: all .5s;
+        touch-action: manipulation;
+    }
+
+</style>
+
 <!-- Navbar Containter-->
 <div class="py-3 bg-primary">
     <div class="containter">
@@ -52,7 +170,7 @@
                                 </div>
                             </div>
                             {% endfor %}
-                            <a href="{% url 'checkout' %}" class="btn btn-outline-success float-end">Checkout</a>
+                            <a href="{% url 'checkout' %}" class="btn btn-success float-end">Checkout</a>
                         {% else %}
                             <h4>Your Cart is Empty.</h4>
                         {% endif %}
