--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -1,23 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <style>
     .container {
         margin-top: 40px;
     }
 
     .card {
-        background-color: #F3EEEA;
-        box-shadow: 0 0 200px rgba(255, 182, 193, 0.8);
+        background-color: #ffffff;
+        box-shadow: 0 0 100px rgb(255, 182, 193);
         border-radius: 10px;
         margin-bottom: 20px;
         transition: box-shadow 0.3s ease;
         width: 100%;
+        border-color: #ffffff;
     }
 
     .card:hover {
         box-shadow: 
-            0 0 10px rgba(128, 0, 128, 0.8); /* Purple shadow on hover */
+            0 0 20px rgba(255, 140, 255, 0.8); /* Purple shadow on hover */
     }
 
     .category-image img {
