--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -8,14 +8,14 @@
   .product_data {
     background-color: #F3EEEA;
     opacity: 0.8;
-    box-shadow: 0 4px 8px rgba(255, 182, 193, 0.5);
+    box-shadow: 0 4px 8px rgba(255, 182, 193, 0.856);
     transition: box-shadow 0.3s ease;
     border-radius: 10px;
     margin-top: 40px;
     }
 
     .badge bg-success {
-        background-color: #F3EEEA;   
+        background-color: #ffffff;   
 
     }
 
@@ -24,9 +24,9 @@
   }
 
   .product_viewtag {
-    background-color: gray;
+    background-color: rgb(206, 206, 206);
     opacity: 0.5;
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 3px 8px;
     border-radius: 4px;
     font-size: 12px;
@@ -51,6 +51,52 @@
     font-weight: bold;
     display: block; /* Add this line to make it break into a new line */
   }
+
+    .btn-primary {
+    background-color:rgb(133, 233, 138);
+    border-radius: 15px;
+    border-style: none;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    height: 3rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    transition: all .5s;
+    touch-action: manipulation;
+    }
+
+    .btn-success {
+    background-color:rgb(222, 161, 250);
+    border-radius: 15px;
+    border-style: none;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    height: 3rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    transition: all .5s;
+    touch-action: manipulation;
+    }
+
+    .btn-primary:hover{
+        background-color: rgb(97, 177, 101);
+        text-decoration: none;
+    }
+
+    .btn-success:hover{
+        background-color: rgb(178, 128, 201);
+        text-decoration: none;
+    }
+
+    .increment-btn, 
+    .decrement-btn{
+        background-color: rgb(255, 213, 219);
+        border-radius: 12px;
+
+    }
+
 </style>
 
 <div class="container">
