For Hosting Purposes
Jaymar Host mo na

--- a/products/templates/checkout.html
+++ b/products/templates/checkout.html
@@ -186,7 +186,7 @@
                                                 {{ item.product.name }}
                                             </td>
                                             <td>{{ item.product_qty }}</td>
-                                            <td>{{ item.product.selling_price | stringformat:'.2f' }} USD</td>
+                                            <td>{{ item.product.selling_price | stringformat:'.2f' }} PHP</td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
