--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -82,7 +82,7 @@
                                 {% endif %}
                             </div>
                             <h4>{{item.name}}</h4>
-                            <span>{{item.selling_price}}</span>
+                            <span>{{item.selling_price}} PHP</span>
                         </div>
                     </a>
                 </div>
