--- a/products/templates/wishlist.html
+++ b/products/templates/wishlist.html
@@ -135,7 +135,7 @@
             
             $.ajax({
                 method: "POST",
-                url: 'http://localhost:8000/delete-wishlist-item/',  // Full URL
+                url: 'http://127.0.0.1:8000/delete-wishlist-item/',  // Full URL
                 data: {
                     'product_id' : product_id,
                     csrfmiddlewaretoken : token,
