--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,10 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="{% static 'js/jquery-3.7.1.min.js'%}"></script>
     <!-- Alertify.js-->
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    <script src="{% static 'js/alertify.min.js'%}"></script>
     <script>
       $(document).ready(function() {
           console.log("jQuery loaded successfully");
@@ -22,18 +24,18 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    
     <!-- Alertify.JS-->
     <!-- CSS -->
     <link rel="stylesheet" href="{% static '/js/navbar.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+    <link rel="stylesheet" href="{% static '/js/alertify.min.css'%}"/>
     <!-- Default theme -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+    
     <title>A2K: One Stop K-Shop</title>
   </head>
   <body style="background: #ffffff;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand ml-sm-2" href="/home"> <img src="{% static 'logo draft.svg'%}" height="30" width="30"></a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand ml-sm-2" href= "{% url 'home' %}"> <img src="{% static 'logo_draft.svg'%}" height="40" width="40"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -109,6 +111,7 @@
       {% endfor %}
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="{% static '/js/popper.min.js'%}"></script>
+    <script src="{% static '/js/bootstrap.min.js' %}"></script>
   </body>
 </html>
